--- a/anti-ad-clash.yaml
+++ b/anti-ad-clash.yaml
@@ -1,8 +1,8 @@
 payload:
   - DOMAIN-SUFFIX,#TITLE=anti-AD
-  - DOMAIN-SUFFIX,#VER=20220108024407
+  - DOMAIN-SUFFIX,#VER=20220108162842
   - DOMAIN-SUFFIX,#URL=https://github.com/privacy-protection-tools/anti-AD
-  - DOMAIN-SUFFIX,#TOTAL_LINES=57861
+  - DOMAIN-SUFFIX,#TOTAL_LINES=57846
   - DOMAIN-SUFFIX,00-gov.cn
   - DOMAIN-SUFFIX,000123456789.online
   - DOMAIN-SUFFIX,000123456789.site
@@ -1942,7 +1942,6 @@ payload:
   - DOMAIN-SUFFIX,54kefu.net
   - DOMAIN-SUFFIX,55-trk-srv.com
   - DOMAIN-SUFFIX,s4.55.la
-  - DOMAIN-SUFFIX,55.la
   - DOMAIN-SUFFIX,ie.5500w.com
   - DOMAIN-SUFFIX,yxzfdl.550909.com
   - DOMAIN-SUFFIX,550b3ikb9j.com
@@ -5956,7 +5955,6 @@ payload:
   - DOMAIN-SUFFIX,dm.aizhan.com
   - DOMAIN-SUFFIX,dmm.aizhan.com
   - DOMAIN-SUFFIX,fpbb.aizhan.com
-  - DOMAIN-SUFFIX,aizhigu.com.cn
   - DOMAIN-SUFFIX,aj1052.online
   - DOMAIN-SUFFIX,aj1090.online
   - DOMAIN-SUFFIX,aj1432.online
@@ -8610,7 +8608,6 @@ payload:
   - DOMAIN-SUFFIX,baiwb.com
   - DOMAIN-SUFFIX,baiweluy.com
   - DOMAIN-SUFFIX,baiwv.com
-  - DOMAIN-SUFFIX,baixing.com
   - DOMAIN-SUFFIX,d.admx.baixing.com
   - DOMAIN-SUFFIX,tu.baixing.com
   - DOMAIN-SUFFIX,bd-js.baixing.net
@@ -9879,7 +9876,10 @@ payload:
   - DOMAIN-SUFFIX,gstat.bitauto.com
   - DOMAIN-SUFFIX,ad.bitbay.net
   - DOMAIN-SUFFIX,bitbeat7.com
-  - DOMAIN-SUFFIX,bitbucket.io
+  - DOMAIN-SUFFIX,fresh-js.bitbucket.io
+  - DOMAIN-SUFFIX,refresh-js.bitbucket.io
+  - DOMAIN-SUFFIX,www.fresh-js.bitbucket.io
+  - DOMAIN-SUFFIX,www.refresh-js.bitbucket.io
   - DOMAIN-SUFFIX,bitclub.network
   - DOMAIN-SUFFIX,bitclubnetwork.com
   - DOMAIN-SUFFIX,bitcoadz.io
@@ -12662,7 +12662,6 @@ payload:
   - DOMAIN-SUFFIX,clamskeined.com
   - DOMAIN-SUFFIX,clankallegation.com
   - DOMAIN-SUFFIX,collector.clareity.net
-  - DOMAIN-SUFFIX,clarins.com.cn
   - DOMAIN-SUFFIX,dqygip.clarins.ru
   - DOMAIN-SUFFIX,sp.clarionledger.com
   - DOMAIN-SUFFIX,smetrics.claris.com
@@ -18685,7 +18684,6 @@ payload:
   - DOMAIN-SUFFIX,dnsseed.emzy.de
   - DOMAIN-SUFFIX,med.enablex.com
   - DOMAIN-SUFFIX,enactmedic.com
-  - DOMAIN-SUFFIX,ename.com.cn
   - DOMAIN-SUFFIX,encamionnerai.xyz
   - DOMAIN-SUFFIX,encasedandelionhauled.com
   - DOMAIN-SUFFIX,enceansom.club
@@ -27365,7 +27363,6 @@ payload:
   - DOMAIN-SUFFIX,secure.jaup0lake.com
   - DOMAIN-SUFFIX,jautouze.net
   - DOMAIN-SUFFIX,www.jav23.com
-  - DOMAIN-SUFFIX,jav321.com
   - DOMAIN-SUFFIX,sjremetrics.java.com
   - DOMAIN-SUFFIX,javacript.tk
   - DOMAIN-SUFFIX,javbucks.com
@@ -29245,7 +29242,6 @@ payload:
   - DOMAIN-SUFFIX,kneestep.com
   - DOMAIN-SUFFIX,kneetournament.com
   - DOMAIN-SUFFIX,kneeunsettled.com
-  - DOMAIN-SUFFIX,knet.cn
   - DOMAIN-SUFFIX,kxlogo.knet.cn
   - DOMAIN-SUFFIX,rr.knet.cn
   - DOMAIN-SUFFIX,ss.knet.cn
@@ -35120,7 +35116,6 @@ payload:
   - DOMAIN-SUFFIX,neitherentrailsrim.com
   - DOMAIN-SUFFIX,pic.neiyicun.net
   - DOMAIN-SUFFIX,target.nejm.org
-  - DOMAIN-SUFFIX,nejmqianyan.cn
   - DOMAIN-SUFFIX,e.nejup.com
   - DOMAIN-SUFFIX,m.nejup.com
   - DOMAIN-SUFFIX,neki.org
@@ -38295,7 +38290,6 @@ payload:
   - DOMAIN-SUFFIX,peppy2lon1g1stalk.com
   - DOMAIN-SUFFIX,adpromo.peppynet.com
   - DOMAIN-SUFFIX,pepsgolfsintake.com
-  - DOMAIN-SUFFIX,pepsico.com.cn
   - DOMAIN-SUFFIX,tracking.pepsicopartners.com
   - DOMAIN-SUFFIX,perceivednameless.com
   - DOMAIN-SUFFIX,perceivefilthy.com
@@ -43007,7 +43001,6 @@ payload:
   - DOMAIN-SUFFIX,www.s0n.cn
   - DOMAIN-SUFFIX,e.s0o5g.cn
   - DOMAIN-SUFFIX,m.s0o5g.cn
-  - DOMAIN-SUFFIX,s11.cn
   - DOMAIN-SUFFIX,d.s11.cn
   - DOMAIN-SUFFIX,j.s11.cn
   - DOMAIN-SUFFIX,s1t2uuenhsfs.com
@@ -45316,7 +45309,6 @@ payload:
   - DOMAIN-SUFFIX,snakesshop.com
   - DOMAIN-SUFFIX,snakesstone.com
   - DOMAIN-SUFFIX,snammar-jumntal.com
-  - DOMAIN-SUFFIX,snap.com
   - DOMAIN-SUFFIX,intg.snapchat.com
   - DOMAIN-SUFFIX,tr.snapchat.com
   - DOMAIN-SUFFIX,snapcheat.app
@@ -52529,7 +52521,6 @@ payload:
   - DOMAIN-SUFFIX,m.w6xj6.cn
   - DOMAIN-SUFFIX,m.w720p.cn
   - DOMAIN-SUFFIX,m.w7xj7.cn
-  - DOMAIN-SUFFIX,w8.com.cn
   - DOMAIN-SUFFIX,ca.w8.com.cn
   - DOMAIN-SUFFIX,zdw.w8.com.cn
   - DOMAIN-SUFFIX,ee.w82ph.cn
@@ -52767,7 +52758,6 @@ payload:
   - DOMAIN-SUFFIX,link.watchoxygen.com
   - DOMAIN-SUFFIX,watchsk.com
   - DOMAIN-SUFFIX,watchtaro.com
-  - DOMAIN-SUFFIX,watchtimes.com.cn
   - DOMAIN-SUFFIX,hda.watchtimes.com.cn
   - DOMAIN-SUFFIX,tracking.waterfrontmedia.com
   - DOMAIN-SUFFIX,waterincloud.cn
@@ -53354,7 +53344,6 @@ payload:
   - DOMAIN-SUFFIX,wheshaud.net
   - DOMAIN-SUFFIX,whexamipta.com
   - DOMAIN-SUFFIX,whezogrewha.com
-  - DOMAIN-SUFFIX,whhd.gov.cn
   - DOMAIN-SUFFIX,whhepyd.cn
   - DOMAIN-SUFFIX,whhxnz.com
   - DOMAIN-SUFFIX,whiceega.com
@@ -54856,7 +54845,6 @@ payload:
   - DOMAIN-SUFFIX,mldy.xiexiangzi.cn
   - DOMAIN-SUFFIX,xieyanmin.com.cn
   - DOMAIN-SUFFIX,xifatime.com
-  - DOMAIN-SUFFIX,xifuquan.com
   - DOMAIN-SUFFIX,xigeng0375.com
   - DOMAIN-SUFFIX,xigeweb.com
   - DOMAIN-SUFFIX,xigolashu.com
@@ -54984,7 +54972,6 @@ payload:
   - DOMAIN-SUFFIX,xiyyq.cn
   - DOMAIN-SUFFIX,app.xizi.com
   - DOMAIN-SUFFIX,xizupsawo.pro
-  - DOMAIN-SUFFIX,xj-n-tax.gov.cn
   - DOMAIN-SUFFIX,xj40666.vip
   - DOMAIN-SUFFIX,xjbaisi.cn
   - DOMAIN-SUFFIX,conabi.xjditan.com
@@ -56902,7 +56889,6 @@ payload:
   - DOMAIN-SUFFIX,zavunuve.pro
   - DOMAIN-SUFFIX,zayac2volk11.com
   - DOMAIN-SUFFIX,zazerygu.pro
-  - DOMAIN-SUFFIX,zazhipu.com
   - DOMAIN-SUFFIX,zazkkk.com
   - DOMAIN-SUFFIX,maz.zba.jp
   - DOMAIN-SUFFIX,m.zbhbs.cn
@@ -57667,7 +57653,6 @@ payload:
   - DOMAIN-SUFFIX,ztdsp.com
   - DOMAIN-SUFFIX,ztexhfznxvpr.com
   - DOMAIN-SUFFIX,ztffac.com
-  - DOMAIN-SUFFIX,ztgame.com
   - DOMAIN-SUFFIX,zthhhbb.cn
   - DOMAIN-SUFFIX,ztidu.com
   - DOMAIN-SUFFIX,ztsrv.com
