--- a/directbak.yaml
+++ b/directbak.yaml
@@ -8275,6 +8275,7 @@ payload:
   - '+.ahbys.com'
   - '+.ahbztv.com'
   - '+.ahbzyy.com'
+  - '+.ahc.ink'
   - '+.ahcaijing.com'
   - '+.ahcaw.com'
   - '+.ahchanyi.com'
@@ -8314,6 +8315,7 @@ payload:
   - '+.ahljnews.com'
   - '+.ahmayun.com'
   - '+.ahmky.com'
+  - '+.ahmup.com'
   - '+.ahnews.org'
   - '+.ahougn.com'
   - '+.ahphi.com'
@@ -9093,6 +9095,7 @@ payload:
   - '+.amh.sh'
   - '+.amhimalayanet.com'
   - '+.amhl.net'
+  - '+.amhnn.com'
   - '+.amicool.net'
   - '+.amif-expo.com'
   - '+.amijiaoyu.com'
@@ -11325,6 +11328,7 @@ payload:
   - '+.bguai.com'
   - '+.bgwl.net'
   - '+.bgyfhyx.com'
+  - '+.bgyjr.com'
   - '+.bh.sb'
   - '+.bh1t.com'
   - '+.bh3.com'
@@ -12634,6 +12638,7 @@ payload:
   - '+.btglotto.com'
   - '+.bthhotels.com'
   - '+.bthlt.com'
+  - '+.bthss.com'
   - '+.bthuifu.com'
   - '+.btime.com'
   - '+.btiyu.com'
@@ -15552,7 +15557,6 @@ payload:
   - '+.chrice.net'
   - '+.chrieschina.com'
   - '+.chris-tina.com'
-  - '+.christianlouboutin-shop.com'
   - '+.chrisyue.com'
   - '+.chrmn.com'
   - '+.chrom-china.com'
@@ -18615,7 +18619,6 @@ payload:
   - '+.dassm.com'
   - '+.dasung.com'
   - '+.dasungtech.com'
-  - '+.dat8.cc'
   - '+.data380.com'
   - '+.data985.com'
   - '+.datacaciques.com'
@@ -20490,6 +20493,7 @@ payload:
   - '+.du8.com'
   - '+.duai.com'
   - '+.dualaid.com'
+  - '+.duan.red'
   - '+.duanjn.com'
   - '+.duanjuzi.com'
   - '+.duanlonggang.com'
@@ -21249,7 +21253,6 @@ payload:
   - '+.ecitic.com'
   - '+.ecjson.com'
   - '+.ecjtu.net'
-  - '+.ecjtu.org'
   - '+.eckjzx.com'
   - '+.ecloud.hk'
   - '+.eclyw.com'
@@ -21584,6 +21587,7 @@ payload:
   - '+.eigpay.com'
   - '+.eiicn.com'
   - '+.eiimg.com'
+  - '+.eiisys.com'
   - '+.eilieili.cc'
   - '+.eimoney.com'
   - '+.eindex.me'
@@ -23167,6 +23171,7 @@ payload:
   - '+.fhoverseas.com'
   - '+.fhrl2018.com'
   - '+.fhrlw.com'
+  - '+.fhsas.com'
   - '+.fhtj.com'
   - '+.fhtlw.com'
   - '+.fhtre.com'
@@ -30217,6 +30222,7 @@ payload:
   - '+.i3v.cc'
   - '+.i3youlun.com'
   - '+.i3yuan.com'
+  - '+.i3zh.com'
   - '+.i4px.com'
   - '+.i4t.com'
   - '+.i51game.com'
@@ -30418,6 +30424,7 @@ payload:
   - '+.icefoxgame.com'
   - '+.iceinto.com'
   - '+.icekr.com'
+  - '+.icekylin.online'
   - '+.icemle.org'
   - '+.iceshi.org'
   - '+.icesimba.com'
@@ -37743,7 +37750,6 @@ payload:
   - '+.linux265.com'
   - '+.linux5.net'
   - '+.linux6.com'
-  - '+.linuxacme.icu'
   - '+.linuxba.com'
   - '+.linuxbaike.com'
   - '+.linuxbaodian.com'
@@ -40582,6 +40588,7 @@ payload:
   - '+.miniluck.com'
   - '+.miningconf.org'
   - '+.mininglamp.com'
+  - '+.miniso.com'
   - '+.minisoyo.com'
   - '+.ministudy.com'
   - '+.minitiao.com'
@@ -41279,6 +41286,7 @@ payload:
   - '+.msddp.com'
   - '+.msdelectron.com'
   - '+.msfpay.com'
+  - '+.msfxt.com'
   - '+.msgcarry.com'
   - '+.msgr.dlservice.microsoft.com'
   - '+.msgruser.dlservice.microsoft.com'
@@ -44306,6 +44314,7 @@ payload:
   - '+.pet86.com'
   - '+.peter-zhou.com'
   - '+.petersonlian.com'
+  - '+.petkit.com'
   - '+.petkoo.com'
   - '+.petmrs.com'
   - '+.petnakanojo.com'
@@ -46580,7 +46589,6 @@ payload:
   - '+.qtbcw.com'
   - '+.qtbig.com'
   - '+.qtccolor.com'
-  - '+.qtch888.com'
   - '+.qtcn.org'
   - '+.qtconcerthall.com'
   - '+.qtdebug.com'
@@ -48846,6 +48854,7 @@ payload:
   - '+.seseacg.com'
   - '+.sesier.com'
   - '+.sesliritim.com'
+  - '+.sesubox.com'
   - '+.seteuid0.com'
   - '+.seuic.com'
   - '+.sevdot.com'
@@ -61721,6 +61730,7 @@ payload:
   - '+.xueshu.com'
   - '+.xueshu5.com'
   - '+.xueshuda.com'
+  - '+.xueshujia.com'
   - '+.xuetangonline.com'
   - '+.xuetangx.com'
   - '+.xuetangzaixian.com'
@@ -62065,6 +62075,7 @@ payload:
   - '+.xyvending.com'
   - '+.xyw.com'
   - '+.xywallet.com'
+  - '+.xywm.ltd'
   - '+.xywooden.com'
   - '+.xywy.com'
   - '+.xywyfw.com'
