--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3447,7 +3447,6 @@ payload:
   - '+.3daima.com'
   - '+.3dbuyu.com'
   - '+.3dbuyu.net'
-  - '+.3dch.net'
   - '+.3ddayin.net'
   - '+.3ddl.net'
   - '+.3ddl.org'
@@ -3589,7 +3588,6 @@ payload:
   - '+.3y7h.com'
   - '+.3yoqu.com'
   - '+.3yx.com'
-  - '+.3z.cc'
   - '+.3zhijk.com'
   - '+.3zmuseum.com'
   - '+.3zxsw.com'
@@ -4829,7 +4827,6 @@ payload:
   - '+.52shuw.cc'
   - '+.52shuxue.com'
   - '+.52sichou.com'
-  - '+.52soji.com'
   - '+.52solution.com'
   - '+.52souji.net'
   - '+.52souluo.com'
@@ -8742,6 +8739,7 @@ payload:
   - '+.alading123.com'
   - '+.alai.net'
   - '+.alameal.com'
+  - '+.alanyhq.com'
   - '+.albbzjx.com'
   - '+.albltc.com'
   - '+.aldcup.com'
@@ -11507,6 +11505,7 @@ payload:
   - '+.bingdian001.com'
   - '+.bingdian01.com'
   - '+.bingdong700.com'
+  - '+.bingguner.com'
   - '+.binglai.net'
   - '+.binglanggu.com'
   - '+.binglingtech.com'
@@ -12733,7 +12732,6 @@ payload:
   - '+.buylabel.com'
   - '+.buysun.net'
   - '+.buysweet.com'
-  - '+.buytips.site'
   - '+.buyu46.com'
   - '+.buzhi5.com'
   - '+.buzhibushi.com'
@@ -14317,7 +14315,6 @@ payload:
   - '+.chaofanshuma.com'
   - '+.chaofenxiang.vip'
   - '+.chaoji.com'
-  - '+.chaojialin.com'
   - '+.chaojibiaoge.com'
   - '+.chaojideng.com'
   - '+.chaojifan.com'
@@ -14550,7 +14547,6 @@ payload:
   - '+.chenpeng.info'
   - '+.chenplus.com'
   - '+.chenpot.com'
-  - '+.chenqiego.com'
   - '+.chenruixuan.com'
   - '+.chenshipin.com'
   - '+.chensonglin.net'
@@ -19014,7 +19010,6 @@ payload:
   - '+.devexpresscn.com'
   - '+.devio.org'
   - '+.devkang.com'
-  - '+.devopen.club'
   - '+.devops-master.com'
   - '+.devpss.com'
   - '+.devqinwei.com'
@@ -19278,9 +19273,7 @@ payload:
   - '+.dianshangyi.com'
   - '+.dianshi.com'
   - '+.dianshige.com'
-  - '+.dianshihome.com'
   - '+.dianshijia.com'
-  - '+.dianshimo.com'
   - '+.diantoushi.com'
   - '+.diantui.net'
   - '+.dianview.com'
@@ -20713,7 +20706,6 @@ payload:
   - '+.dy1905.net'
   - '+.dy2018.com'
   - '+.dy2018.net'
-  - '+.dy880.com'
   - '+.dybeta.com'
   - '+.dycar.net'
   - '+.dycars.com'
@@ -21391,6 +21383,7 @@ payload:
   - '+.eeussf.com'
   - '+.eeworld.com'
   - '+.eeworm.com'
+  - '+.eexiaoshuo.com'
   - '+.eexing.com'
   - '+.eeyaa.net'
   - '+.eeybo.com'
@@ -22247,7 +22240,6 @@ payload:
   - '+.eyugame.com'
   - '+.eyunidc.com'
   - '+.eyunker.com'
-  - '+.eyunmy.com'
   - '+.eyunsou.com'
   - '+.eyunzhu.com'
   - '+.eyurumen.com'
@@ -23485,7 +23477,6 @@ payload:
   - '+.for512.com'
   - '+.for68.com'
   - '+.forbeschina.com'
-  - '+.forbest.site'
   - '+.forbetty.com'
   - '+.forbugs.net'
   - '+.forbuyers.com'
@@ -24320,8 +24311,6 @@ payload:
   - '+.gaopaiwood.com'
   - '+.gaopeng.com'
   - '+.gaoqing.fm'
-  - '+.gaoqing.la'
-  - '+.gaoqingdianshi.com'
   - '+.gaoqingpai.com'
   - '+.gaoqiwenda.com'
   - '+.gaoqixhb.com'
@@ -25660,6 +25649,7 @@ payload:
   - '+.gtm-a3b7.com'
   - '+.gtm-a4b1.com'
   - '+.gtm-a4b4.com'
+  - '+.gtm-a4b6.com'
   - '+.gtm-a4b8.com'
   - '+.gtm-a4b9.com'
   - '+.gtm-a5b4.com'
@@ -26567,7 +26557,6 @@ payload:
   - '+.haitaolab.com'
   - '+.haitaopd.com'
   - '+.haitaoqq.com'
-  - '+.haitaoshen.com'
   - '+.haitaotong.com'
   - '+.haitaozu.org'
   - '+.haitianhome.com'
@@ -27157,7 +27146,6 @@ payload:
   - '+.hbeducloud.com'
   - '+.hbekt.com'
   - '+.hbepec.com'
-  - '+.hbexqt.com'
   - '+.hbez.net'
   - '+.hbezzx.com'
   - '+.hbfie.org'
@@ -28703,7 +28691,6 @@ payload:
   - '+.housebaby.com'
   - '+.housedp.com'
   - '+.housenhe.com'
-  - '+.housesg365.com'
   - '+.housoo.com'
   - '+.houxue.com'
   - '+.houyicaiji.com'
@@ -31865,7 +31852,6 @@ payload:
   - '+.itgoodboy.com'
   - '+.ithaowai.com'
   - '+.ithard.com'
-  - '+.ithat.net'
   - '+.itheat.com'
   - '+.itheima.com'
   - '+.ithelei.com'
@@ -31903,6 +31889,7 @@ payload:
   - '+.itmo.com'
   - '+.itmoocs.com'
   - '+.itmop.com'
+  - '+.itmresources.com'
   - '+.itmsm.com'
   - '+.itmuch.com'
   - '+.itmyhome.com'
@@ -33651,7 +33638,6 @@ payload:
   - '+.jkzl.com'
   - '+.jl0435.com'
   - '+.jl54.org'
-  - '+.jl852.com'
   - '+.jladi.com'
   - '+.jlakes.org'
   - '+.jlbtrip.com'
@@ -34466,7 +34452,6 @@ payload:
   - '+.juxingyi.com'
   - '+.juxinhuizhi.com'
   - '+.juyanbao.com'
-  - '+.juyoufan.net'
   - '+.juyouqu.com'
   - '+.juyouquan.net'
   - '+.juyoutv.cc'
@@ -34818,7 +34803,6 @@ payload:
   - '+.kaihuia.com'
   - '+.kaijia.com'
   - '+.kaijia.me'
-  - '+.kaijiaweishi.com'
   - '+.kaikeba.com'
   - '+.kailing.pub'
   - '+.kaimanhua.com'
@@ -35951,6 +35935,7 @@ payload:
   - '+.kuaishouzt.com'
   - '+.kuaishubao.com'
   - '+.kuaisujiasu.net'
+  - '+.kuaisushu-cnd.com'
   - '+.kuaitijian.com'
   - '+.kuaitu666.com'
   - '+.kuaiwan.com'
@@ -36145,10 +36130,8 @@ payload:
   - '+.kuyun.com'
   - '+.kuyun1.com'
   - '+.kuzhengame.com'
-  - '+.kvecc.com'
   - '+.kvemm.com'
   - '+.kvenjoy.com'
-  - '+.kvezz.com'
   - '+.kviso.com'
   - '+.kvkft.com'
   - '+.kvogues.com'
@@ -36229,7 +36212,6 @@ payload:
   - '+.kylinmobi.com'
   - '+.kylinos.com'
   - '+.kylinpet.com'
-  - '+.kymco.cc'
   - '+.kymjs.com'
   - '+.kynix.com'
   - '+.kyoceraconnect.com'
@@ -36508,7 +36490,6 @@ payload:
   - '+.lanyusf.com'
   - '+.lanzhisky.com'
   - '+.lanzhouunicom.com'
-  - '+.lanzhouyangsheng.com'
   - '+.lanzhuwh.com'
   - '+.lanzou.com'
   - '+.lanzoug.com'
@@ -37526,6 +37507,7 @@ payload:
   - '+.lingyuewx.com'
   - '+.lingyun.net'
   - '+.lingyun5.com'
+  - '+.lingyunip.com'
   - '+.lingyutxt.com'
   - '+.lingzhanwenhua.com'
   - '+.lingzhilab.com'
@@ -38141,7 +38123,6 @@ payload:
   - '+.lonelystar.org'
   - '+.lonery.com'
   - '+.lonfu.org'
-  - '+.long-tv.com'
   - '+.long5.com'
   - '+.long7.com'
   - '+.longaa.com'
@@ -38809,7 +38790,6 @@ payload:
   - '+.lxlggo.com'
   - '+.lxly168.com'
   - '+.lxmiyu.com'
-  - '+.lxplass.com'
   - '+.lxs123.com'
   - '+.lxsales.com'
   - '+.lxsjm.com'
@@ -39781,7 +39761,6 @@ payload:
   - '+.meijutt.com'
   - '+.meijutt.tv'
   - '+.meijuxia.com'
-  - '+.meijuxia.vip'
   - '+.meijuxq.com'
   - '+.meijuzhan.com'
   - '+.meijuzj.com'
@@ -40153,6 +40132,7 @@ payload:
   - '+.miaoshoucdn.com'
   - '+.miaoshuwu.com'
   - '+.miaoshuzhai.com'
+  - '+.miaoshuzhai.net'
   - '+.miaostreet.com'
   - '+.miaov.com'
   - '+.miaoweijianfei.com'
@@ -41660,7 +41640,6 @@ payload:
   - '+.myzte.com'
   - '+.mz-oneacg.com'
   - '+.mz-sys.com'
-  - '+.mz5k.vip'
   - '+.mzbei.com'
   - '+.mzboss.com'
   - '+.mzeat.com'
@@ -41694,7 +41673,6 @@ payload:
   - '+.n12345.com'
   - '+.n12xar123.xyz'
   - '+.n21.cc'
-  - '+.n2v.net'
   - '+.n3ko.co'
   - '+.n3sd.com'
   - '+.n423.com'
@@ -43009,6 +42987,7 @@ payload:
   - '+.officezhushou.com'
   - '+.officezu.com'
   - '+.offodd.com'
+  - '+.offshoremedia.net'
   - '+.ofgame.net'
   - '+.ofidc.com'
   - '+.ofmonkey.com'
@@ -43896,7 +43875,6 @@ payload:
   - '+.parkmecn.com'
   - '+.parkviewgreen.com'
   - '+.parnassusdata.com'
-  - '+.parryqiu.com'
   - '+.parsein.com'
   - '+.partinchina.com'
   - '+.partner.cdnetworks.com'
@@ -45942,7 +45920,6 @@ payload:
   - '+.qiqiww.com'
   - '+.qiqu.la'
   - '+.qiquhudong.com'
-  - '+.qiqutang.com'
   - '+.qiquting.com'
   - '+.qire123.com'
   - '+.qiredy.com'
@@ -46346,6 +46323,7 @@ payload:
   - '+.qqxs.la'
   - '+.qqxs5200.com'
   - '+.qqxsnew.com'
+  - '+.qqxsnew.net'
   - '+.qqxsw.co'
   - '+.qqxsw.info'
   - '+.qqxsw.la'
@@ -47068,7 +47046,6 @@ payload:
   - '+.rebatesme.com'
   - '+.rebcenter.com'
   - '+.rebo5566.com'
-  - '+.rebohu.com'
   - '+.rebooo.com'
   - '+.reborncodinglife.com'
   - '+.recgo.com'
@@ -48763,7 +48740,6 @@ payload:
   - '+.sgou.com'
   - '+.sgpy08.com'
   - '+.sgshero.com'
-  - '+.sgshuangfa.com'
   - '+.sgsxw.com'
   - '+.sguo.com'
   - '+.sgwk.info'
@@ -50204,7 +50180,6 @@ payload:
   - '+.sipo-tj.com'
   - '+.siportal.cdnetworks.com'
   - '+.siposchina.com'
-  - '+.siqiangame.com'
   - '+.siqiquan.org'
   - '+.sique.com'
   - '+.sir3.com'
@@ -52671,7 +52646,6 @@ payload:
   - '+.taodabai.com'
   - '+.taodake.com'
   - '+.taodangpu.com'
-  - '+.taodao.kim'
   - '+.taodaso.com'
   - '+.taodaxiang.com'
   - '+.taodianjia.com'
@@ -53315,7 +53289,6 @@ payload:
   - '+.tiancipz.com'
   - '+.tiancity.com'
   - '+.tiancitycdn.com'
-  - '+.tianda120.com'
   - '+.tiandaoedu.com'
   - '+.tiandi.com'
   - '+.tianditu.com'
@@ -53432,6 +53405,7 @@ payload:
   - '+.tianyabook.com'
   - '+.tianyaclub.com'
   - '+.tianyaluedu.com'
+  - '+.tianyana.com'
   - '+.tianyancha.com'
   - '+.tianyanqifu.com'
   - '+.tianyant.com'
@@ -53906,7 +53880,6 @@ payload:
   - '+.tongji.net'
   - '+.tongjiai.com'
   - '+.tongjitong.com'
-  - '+.tongjiwo.com'
   - '+.tongleer.com'
   - '+.tongli-hrcc.net'
   - '+.tongliangrc.com'
@@ -53920,7 +53893,6 @@ payload:
   - '+.tongshuai.com'
   - '+.tongtech.com'
   - '+.tongtianta.site'
-  - '+.tongtimes.com'
   - '+.tongtongli.com'
   - '+.tongtool.com'
   - '+.tongwang.net'
@@ -55595,7 +55567,6 @@ payload:
   - '+.uu898.com'
   - '+.uuaa.net'
   - '+.uuaoz.com'
-  - '+.uubiqu.com'
   - '+.uuboos.com'
   - '+.uucolor.com'
   - '+.uudsp.com'
@@ -58037,7 +58008,6 @@ payload:
   - '+.wikiyuedu.com'
   - '+.wikore.com'
   - '+.wikore.net'
-  - '+.wikore.org'
   - '+.wilddog.com'
   - '+.wilddream.net'
   - '+.wildgun.net'
@@ -58918,7 +58888,6 @@ payload:
   - '+.wuhanyidu.com'
   - '+.wuhanzdq.com'
   - '+.wuhanzhongye.com'
-  - '+.wuhao.me'
   - '+.wuhongsheng.com'
   - '+.wuhouhaodian.com'
   - '+.wuhu.cc'
@@ -60201,7 +60170,6 @@ payload:
   - '+.xiaowazi.com'
   - '+.xiaoweigod.com'
   - '+.xiaoweirobot.com'
-  - '+.xiaoweizhibo.com'
   - '+.xiaowiba.com'
   - '+.xiaowm.com'
   - '+.xiaoxiaapi.com'
@@ -60785,7 +60753,6 @@ payload:
   - '+.xishiwang.com'
   - '+.xishuai.com'
   - '+.xishuai.net'
-  - '+.xishuiw.com'
   - '+.xisj.com'
   - '+.xisslvyou.com'
   - '+.xitao88.com'
@@ -62232,6 +62199,7 @@ payload:
   - '+.yatsenglobal.com'
   - '+.yatsoft.com'
   - '+.yawancaiwu.com'
+  - '+.yawen.cc'
   - '+.yawenb.com'
   - '+.yawkj.com'
   - '+.yaxi.net'
@@ -62924,7 +62892,6 @@ payload:
   - '+.yingtaoai.com'
   - '+.yingtaosiyue.com'
   - '+.yingtaoyun.com'
-  - '+.yingtongsz.com'
   - '+.yingucaifu.com'
   - '+.yingujr.com'
   - '+.yinguobing.com'
@@ -63885,7 +63852,6 @@ payload:
   - '+.youzi100.com'
   - '+.youzibank.com'
   - '+.youzibuy.com'
-  - '+.youzicoin.com'
   - '+.youzijie.com'
   - '+.youziku.com'
   - '+.youzikuaibao.com'
@@ -64557,7 +64523,6 @@ payload:
   - '+.yuntongxun.com'
   - '+.yuntouxiang.com'
   - '+.yuntu.io'
-  - '+.yuntuds.com'
   - '+.yunvm.com'
   - '+.yunvs.com'
   - '+.yunwangke.com'
@@ -67264,6 +67229,7 @@ payload:
   - '+.zshl.com'
   - '+.zshlife.com'
   - '+.zshuoshao.online'
+  - '+.zshzfzj.com'
   - '+.zsia.org'
   - '+.zsihuo.com'
   - '+.zsincer.com'
