--- a/directbak.yaml
+++ b/directbak.yaml
@@ -728,6 +728,7 @@ payload:
   - '+.0rg.pw'
   - '+.0rl.cc'
   - '+.0s8s.com'
+  - '+.0sm.com'
   - '+.0x0.biz'
   - '+.0x0.ooo'
   - '+.0x100.club'
@@ -1808,7 +1809,6 @@ payload:
   - '+.1866.tv'
   - '+.18665348887.com'
   - '+.186688.com'
-  - '+.1872.net'
   - '+.187801.com'
   - '+.188.com'
   - '+.188158.com'
@@ -3747,6 +3747,7 @@ payload:
   - '+.4492.com'
   - '+.4493.com'
   - '+.44971.com'
+  - '+.44api.com'
   - '+.44dt.com'
   - '+.44england.com'
   - '+.44hyk.com'
@@ -3866,6 +3867,7 @@ payload:
   - '+.4kya.com'
   - '+.4kyy.com'
   - '+.4l.hk'
+  - '+.4lzr.com'
   - '+.4lzx.com'
   - '+.4paradigm.com'
   - '+.4px.com'
@@ -4950,7 +4952,6 @@ payload:
   - '+.54bt.com'
   - '+.54doctor.net'
   - '+.54doctors.net'
-  - '+.54hacker.com'
   - '+.54hcz.com'
   - '+.54heb.com'
   - '+.54hei.com'
@@ -4963,6 +4964,7 @@ payload:
   - '+.54manong.com'
   - '+.54md.com'
   - '+.54op.com'
+  - '+.54pictu.com'
   - '+.54share.com'
   - '+.54tf.com'
   - '+.54traveler.com'
@@ -5521,6 +5523,7 @@ payload:
   - '+.6080d.com'
   - '+.6080j.com'
   - '+.6080k.com'
+  - '+.6088.xyz'
   - '+.6090b.com'
   - '+.60dj.com'
   - '+.60eee.net'
@@ -8031,6 +8034,7 @@ payload:
   - '+.adjucai.com'
   - '+.adjumo.com'
   - '+.adjuz.com'
+  - '+.adkwai.com'
   - '+.adl888.com'
   - '+.adl999.com'
   - '+.adlefee.com'
@@ -8719,6 +8723,7 @@ payload:
   - '+.akq.ee'
   - '+.akr-developers.com'
   - '+.akscan.com'
+  - '+.akswe.com'
   - '+.aksxw.com'
   - '+.aku.pub'
   - '+.akuaikan.com'
@@ -10246,6 +10251,7 @@ payload:
   - '+.baiclouds.com'
   - '+.baicmotor.com'
   - '+.baicmotorsales.com'
+  - '+.baicongjun.com'
   - '+.baicuoa.com'
   - '+.baidajob.com'
   - '+.baidao.com'
@@ -10569,7 +10575,6 @@ payload:
   - '+.banyuetan.org'
   - '+.banyuetanxcx.com'
   - '+.banyunjuhe.com'
-  - '+.banzhuren365.com'
   - '+.banzou.name'
   - '+.banzouku.com'
   - '+.bao-cun.com'
@@ -11276,7 +11281,6 @@ payload:
   - '+.bh.sb'
   - '+.bh1t.com'
   - '+.bh3.com'
-  - '+.bh45.com'
   - '+.bh4dks.com'
   - '+.bh5.com'
   - '+.bhdata.com'
@@ -11804,6 +11808,7 @@ payload:
   - '+.bjdt360.com'
   - '+.bjeasycom.com'
   - '+.bjepn.com'
+  - '+.bjertong999.com'
   - '+.bjewaytek.com'
   - '+.bjexmail.com'
   - '+.bjexx.com'
@@ -12133,6 +12138,7 @@ payload:
   - '+.bluefeel.com'
   - '+.bluefite.com'
   - '+.bluefocus.com'
+  - '+.blueglass.vip'
   - '+.bluegq.com'
   - '+.bluehao.com'
   - '+.bluehn.com'
@@ -12679,6 +12685,7 @@ payload:
   - '+.bumiu.com'
   - '+.bundpic.com'
   - '+.bunfly.com'
+  - '+.bungalow54.com'
   - '+.bungba.com'
   - '+.bunze.com'
   - '+.buread.com'
@@ -13166,6 +13173,7 @@ payload:
   - '+.cake6.com'
   - '+.calawei.com'
   - '+.calculusdata.com'
+  - '+.caldigit.net'
   - '+.cali-light.com'
   - '+.calibur.tv'
   - '+.callda.com'
@@ -13412,7 +13420,6 @@ payload:
   - '+.cc0808.com'
   - '+.cc1021.com'
   - '+.cc11bh.com'
-  - '+.cc123.com'
   - '+.cc148.com'
   - '+.cc222.com'
   - '+.cc55k.com'
@@ -14341,7 +14348,6 @@ payload:
   - '+.chaosu.com'
   - '+.chaosuduokai.com'
   - '+.chaosw.com'
-  - '+.chaotag.com'
   - '+.chaov.com'
   - '+.chaowaihui.com'
   - '+.chaowaihui.net'
@@ -14484,7 +14490,6 @@ payload:
   - '+.chengdechina.com'
   - '+.chengder.com'
   - '+.chengdu-expat.com'
-  - '+.chengdulvshi.net'
   - '+.chengdun.com'
   - '+.chengedeco.com'
   - '+.chengezhao.com'
@@ -16114,6 +16119,7 @@ payload:
   - '+.cmfspay.com'
   - '+.cmft.com'
   - '+.cmfu.com'
+  - '+.cmgadx.com'
   - '+.cmgame.com'
   - '+.cmge.com'
   - '+.cmgos.com'
@@ -16156,6 +16162,7 @@ payload:
   - '+.cmt7.com'
   - '+.cmtdi.com'
   - '+.cmtech.net'
+  - '+.cmtrq.com'
   - '+.cmu1h.com'
   - '+.cmuliang.com'
   - '+.cmvtc.com'
@@ -16624,7 +16631,6 @@ payload:
   - '+.cnpkm.com'
   - '+.cnplugins.com'
   - '+.cnpmjs.org'
-  - '+.cnpolitics.org'
   - '+.cnponer.com'
   - '+.cnpou.com'
   - '+.cnpowdernet.com'
@@ -18587,6 +18593,7 @@ payload:
   - '+.dawenxue.org'
   - '+.dawndiy.com'
   - '+.dawnlab.me'
+  - '+.dawuhanapp.com'
   - '+.dawuxia.net'
   - '+.dawx.com'
   - '+.dawx.net'
@@ -19016,6 +19023,7 @@ payload:
   - '+.dewumall.com'
   - '+.dexcoder.com'
   - '+.dexian.mobi'
+  - '+.dexindat.com'
   - '+.dexingrv.com'
   - '+.dexinsg.com'
   - '+.dexuee.com'
@@ -19052,7 +19060,6 @@ payload:
   - '+.dfedu.com'
   - '+.dfgzqc.com'
   - '+.dfham.com'
-  - '+.dfhdw.com'
   - '+.dfhon.com'
   - '+.dfhtjn.com'
   - '+.dfkcgs.com'
@@ -19387,6 +19394,7 @@ payload:
   - '+.digi-wo.com'
   - '+.digirepub.com'
   - '+.digisky.com'
+  - '+.digital-ren.com'
   - '+.digitalchina.com'
   - '+.digitalcq.com'
   - '+.digitaling.com'
@@ -19692,7 +19700,6 @@ payload:
   - '+.dm321.net'
   - '+.dm4mm.com'
   - '+.dm5.com'
-  - '+.dm77.com'
   - '+.dm789.com'
   - '+.dm9.com'
   - '+.dmacg.net'
@@ -22510,6 +22517,7 @@ payload:
   - '+.fanjian8.com'
   - '+.fanjianhome.com'
   - '+.fanjinyan.com'
+  - '+.fankhome.com'
   - '+.fanli.com'
   - '+.fanli001.net'
   - '+.fanlibang.com'
@@ -22963,6 +22971,7 @@ payload:
   - '+.fengxiaotx.com'
   - '+.fengxuan.co'
   - '+.fengyan.cc'
+  - '+.fengye.cool'
   - '+.fengyitong.name'
   - '+.fengyu.cc'
   - '+.fengyu.moe'
@@ -23015,6 +23024,7 @@ payload:
   - '+.fevte.com'
   - '+.feydj.com'
   - '+.ff14.org'
+  - '+.ff14yuanxiang.com'
   - '+.ff54.ink'
   - '+.ff63.com'
   - '+.ff8828.com'
@@ -24363,6 +24373,7 @@ payload:
   - '+.gaussianoptics.com'
   - '+.gavindesign.com'
   - '+.gaxrmyy.com'
+  - '+.gay20.com'
   - '+.gbase8a.com'
   - '+.gbasebi.com'
   - '+.gbdex.com'
@@ -24921,6 +24932,7 @@ payload:
   - '+.gjbaek.ren'
   - '+.gjcdn.vip'
   - '+.gjceshi9.com'
+  - '+.gjds.vip'
   - '+.gjfax.com'
   - '+.gjgov.com'
   - '+.gjgwy.net'
@@ -27419,6 +27431,8 @@ payload:
   - '+.hdsdyyy.com'
   - '+.hdslb.com'
   - '+.hdslb.net'
+  - '+.hdsx36hb.com'
+  - '+.hdsx39hb.com'
   - '+.hdtgtm.com'
   - '+.hdthjy.com'
   - '+.hdtmedia.com'
@@ -27531,7 +27545,6 @@ payload:
   - '+.heiluo.com'
   - '+.heima.com'
   - '+.heima8.com'
-  - '+.heimaba.com'
   - '+.heimabao.com'
   - '+.heimac.net'
   - '+.heimacode.com'
@@ -27620,6 +27633,7 @@ payload:
   - '+.helloradio.org'
   - '+.hellorf.com'
   - '+.hellotalk8.com'
+  - '+.hellotw.com'
   - '+.helloweba.com'
   - '+.helloweba.net'
   - '+.hellowebfont.com'
@@ -28333,7 +28347,6 @@ payload:
   - '+.hnjing.net'
   - '+.hnjkjn.com'
   - '+.hnjkw.net'
-  - '+.hnjn.net'
   - '+.hnjshzy.com'
   - '+.hnkeji999.com'
   - '+.hnkljnxh.com'
@@ -28833,6 +28846,7 @@ payload:
   - '+.hs950.com'
   - '+.hsakyy.com'
   - '+.hsanhl.com'
+  - '+.hsay.com'
   - '+.hsbdc.com'
   - '+.hsboss.com'
   - '+.hscbw.com'
@@ -33011,7 +33025,6 @@ payload:
   - '+.jihot.com'
   - '+.jihuachina.com'
   - '+.jihuanshe.com'
-  - '+.jihui.io'
   - '+.jihuoma.com'
   - '+.jijia.com'
   - '+.jijiagames.com'
@@ -33384,6 +33397,7 @@ payload:
   - '+.jitiku.com'
   - '+.jitongtianxia.com'
   - '+.jitu5.com'
+  - '+.jitucdn.com'
   - '+.jituofuture.com'
   - '+.jituwang.com'
   - '+.jiub.ren'
@@ -33428,6 +33442,7 @@ payload:
   - '+.jiupin8.com'
   - '+.jiuq.com'
   - '+.jiurong.com'
+  - '+.jiuse.cloud'
   - '+.jiushiadx.com'
   - '+.jiushikou.com'
   - '+.jiushixing.com'
@@ -33842,6 +33857,7 @@ payload:
   - '+.joozone.com'
   - '+.joqoo.com'
   - '+.josephcz.xyz'
+  - '+.joshreso.com'
   - '+.joshuais.me'
   - '+.josncdn.com'
   - '+.jotop.net'
@@ -34235,7 +34251,6 @@ payload:
   - '+.juemuren4449.com'
   - '+.jueok.com'
   - '+.juesheng.com'
-  - '+.jueshinan.com'
   - '+.jueshitangmen.info'
   - '+.juewei.com'
   - '+.juexiang.com'
@@ -35055,6 +35070,7 @@ payload:
   - '+.kcrcb.com'
   - '+.kcwiki.org'
   - '+.kcyuri.com'
+  - '+.kczhaosheng.com'
   - '+.kd028.com'
   - '+.kd120.com'
   - '+.kd128.com'
@@ -36345,7 +36361,6 @@ payload:
   - '+.lamiu.com'
   - '+.lamost.org'
   - '+.lampchina.net'
-  - '+.lampholder.cc'
   - '+.lampouomo.com'
   - '+.lamyu.com'
   - '+.lan-bridge.com'
@@ -36753,6 +36768,7 @@ payload:
   - '+.learn-quantum.com'
   - '+.learndiary.com'
   - '+.learnfans.com'
+  - '+.learnfk.com'
   - '+.learnfuture.com'
   - '+.learning-archive.org'
   - '+.learnku.com'
@@ -36899,6 +36915,7 @@ payload:
   - '+.leletv.net'
   - '+.lelevod.com'
   - '+.lelewl.com'
+  - '+.lelittlesaigon.com'
   - '+.lemai.com'
   - '+.lemaker.com'
   - '+.lemall.com'
@@ -36937,6 +36954,7 @@ payload:
   - '+.lenovowap.com'
   - '+.lenovows.com'
   - '+.lensuo.com'
+  - '+.lenwoo.com'
   - '+.lenzhao.com'
   - '+.leo96.com'
   - '+.leoao-inc.com'
@@ -39677,6 +39695,7 @@ payload:
   - '+.megou8.com'
   - '+.meguo.com'
   - '+.megvii.com'
+  - '+.mei-shu.com'
   - '+.mei.com'
   - '+.mei1.info'
   - '+.meia.me'
@@ -39822,6 +39841,7 @@ payload:
   - '+.meishubao.com'
   - '+.meishui.com'
   - '+.meishuquan.net'
+  - '+.meishuwenxian.com'
   - '+.meisubq.com'
   - '+.meisupic.com'
   - '+.meitaixianlan.com'
@@ -40354,7 +40374,6 @@ payload:
   - '+.mingluji.com'
   - '+.mingmen-tech.com'
   - '+.mingpian.biz'
-  - '+.mingqingxiaoshuo.com'
   - '+.mingqizhongyi.com'
   - '+.mingren888.com'
   - '+.mingrenteahouse.com'
@@ -41632,7 +41651,6 @@ payload:
   - '+.mz-sys.com'
   - '+.mzbei.com'
   - '+.mzboss.com'
-  - '+.mzeat.com'
   - '+.mzeyes.com'
   - '+.mzfile.com'
   - '+.mzfxw.com'
@@ -42256,6 +42274,7 @@ payload:
   - '+.nikanpian.com'
   - '+.nikefree-run.net'
   - '+.nikest.com'
+  - '+.nikkisoft.com'
   - '+.nikkiup2u2.com'
   - '+.nilai.com'
   - '+.nilegu.com'
@@ -42564,6 +42583,7 @@ payload:
   - '+.nonobank.com'
   - '+.nonozone.net'
   - '+.noobcoder.club'
+  - '+.noobyard.com'
   - '+.noobyy.com'
   - '+.noodba.com'
   - '+.noogel.xyz'
@@ -42906,6 +42926,7 @@ payload:
   - '+.oceanengine.com'
   - '+.oceanlau.com'
   - '+.oceanol.com'
+  - '+.oceanplayable.com'
   - '+.oceeq.com'
   - '+.ochukai.me'
   - '+.ocimg.com'
@@ -43043,7 +43064,6 @@ payload:
   - '+.okemu.com'
   - '+.okex.vip'
   - '+.okex.win'
-  - '+.okexcn.com'
   - '+.okeycar.com'
   - '+.okfri.com'
   - '+.okgj.com'
@@ -43684,6 +43704,7 @@ payload:
   - '+.pailixiang.com'
   - '+.paimaprint.com'
   - '+.paiming.net'
+  - '+.paimingchakan.com'
   - '+.paintinghere.org'
   - '+.paipai.com'
   - '+.paipai123.com'
@@ -43927,6 +43948,7 @@ payload:
   - '+.pc841.com'
   - '+.pc9.com'
   - '+.pcaposter.com'
+  - '+.pcapqz.com'
   - '+.pcb-hl.com'
   - '+.pcb-si.com'
   - '+.pcb3.com'
@@ -45623,6 +45645,7 @@ payload:
   - '+.qichechaoren.com'
   - '+.qichegeyin.com'
   - '+.qichehot.com'
+  - '+.qichetansuo.com'
   - '+.qichetong.com'
   - '+.qichexin.com'
   - '+.qichezhan.net'
@@ -45677,6 +45700,7 @@ payload:
   - '+.qihoo.com'
   - '+.qihoo.net'
   - '+.qihu.com'
+  - '+.qihuayao.com'
   - '+.qihucdn.com'
   - '+.qihuiwang.com'
   - '+.qihuor.com'
@@ -47583,6 +47607,7 @@ payload:
   - '+.rsdgd.com'
   - '+.rsdwg.com'
   - '+.rsdyy.com'
+  - '+.rsk26.com'
   - '+.rsng.net'
   - '+.rso.wang'
   - '+.rsp.ink'
@@ -47970,6 +47995,7 @@ payload:
   - '+.sankougift.com'
   - '+.sankuai.com'
   - '+.sanlan123.com'
+  - '+.sanlangwang.ink'
   - '+.sannongejia.com'
   - '+.sanpowergroup.com'
   - '+.sanpuzhiyao.com'
@@ -48256,6 +48282,7 @@ payload:
   - '+.sczsie.com'
   - '+.sczsxx.com'
   - '+.sczw.com'
+  - '+.sczxmr.com'
   - '+.sczycp.com'
   - '+.sczyh30.com'
   - '+.sd-blb.com'
@@ -48288,6 +48315,7 @@ payload:
   - '+.sddermyy.com'
   - '+.sddeznsm.com'
   - '+.sddh.online'
+  - '+.sddifan.com'
   - '+.sddlys.com'
   - '+.sde6.com'
   - '+.sdebank.com'
@@ -48349,6 +48377,7 @@ payload:
   - '+.sdly35.com'
   - '+.sdmic.com'
   - '+.sdmyzsgs.com'
+  - '+.sdnci.com'
   - '+.sdnfv.org'
   - '+.sdnjsbc.com'
   - '+.sdnlab.com'
@@ -48574,6 +48603,7 @@ payload:
   - '+.sengxian.com'
   - '+.seniverse.com'
   - '+.senleo.com'
+  - '+.senlianshop.com'
   - '+.senlujj.com'
   - '+.senmi88.com'
   - '+.senmiaoschool.com'
@@ -48636,6 +48666,7 @@ payload:
   - '+.serholiu.com'
   - '+.servasoft.com'
   - '+.serverless.ink'
+  - '+.serversad.com'
   - '+.servicemesher.com'
   - '+.servicewechat.com'
   - '+.servingcdn.com'
@@ -49612,6 +49643,7 @@ payload:
   - '+.shtengshi.com'
   - '+.shtennis.org'
   - '+.shtfqx.com'
+  - '+.shtgds.com'
   - '+.shtianhe.cc'
   - '+.shtic.com'
   - '+.shtimg.com'
@@ -49789,6 +49821,7 @@ payload:
   - '+.shuo66.com'
   - '+.shuoba.org'
   - '+.shuobao.com'
+  - '+.shuobofootball.xyz'
   - '+.shuoboku.com'
   - '+.shuodedui.com'
   - '+.shuomingshu.net'
@@ -51342,6 +51375,7 @@ payload:
   - '+.sthke.com'
   - '+.stianran.com'
   - '+.stjfw.net'
+  - '+.stjulianc.org'
   - '+.stjunshi.com'
   - '+.stjy.net'
   - '+.stkey.win'
@@ -51412,6 +51446,7 @@ payload:
   - '+.studyiris.com'
   - '+.studyjamscn.com'
   - '+.studylinux.net'
+  - '+.studyll.com'
   - '+.studyofnet.com'
   - '+.studypay.com'
   - '+.studyuser.com'
@@ -53497,7 +53532,6 @@ payload:
   - '+.time-year.com'
   - '+.time.izatcloud.net'
   - '+.time2011.com'
-  - '+.time8.org'
   - '+.timecoo.com'
   - '+.timedg.com'
   - '+.timenote.cc'
@@ -53664,6 +53698,7 @@ payload:
   - '+.tjxxcl.com'
   - '+.tjxxsw.com'
   - '+.tjxz.cc'
+  - '+.tjyfkt.com'
   - '+.tjyouai.com'
   - '+.tjyun.com'
   - '+.tjyywjc.com'
@@ -53674,6 +53709,7 @@ payload:
   - '+.tjzfcg.com'
   - '+.tjzhongyiyao.com'
   - '+.tjzrld.com'
+  - '+.tjzsxl4.com'
   - '+.tjzyec.com'
   - '+.tk-rays.com'
   - '+.tk-xiong.com'
@@ -53896,7 +53932,6 @@ payload:
   - '+.tongyi.com'
   - '+.tongyidrying.com'
   - '+.tongyongji.net'
-  - '+.tongyongpe.com'
   - '+.tongyou188.com'
   - '+.tongyuanos.com'
   - '+.tongyue.com'
@@ -54659,7 +54694,6 @@ payload:
   - '+.tutu001.com'
   - '+.tutuapp.com'
   - '+.tutucloud.com'
-  - '+.tutuera.com'
   - '+.tutuge.me'
   - '+.tutuim.com'
   - '+.tutupan.com'
@@ -55199,6 +55233,7 @@ payload:
   - '+.ukelink.net'
   - '+.uker.net'
   - '+.ukh5.com'
+  - '+.ukolmv.com'
   - '+.ukongm.com'
   - '+.ukonline2000.com'
   - '+.ukoo.net'
@@ -55631,7 +55666,6 @@ payload:
   - '+.ux87.com'
   - '+.ux98.com'
   - '+.uxacn.com'
-  - '+.uxahz.com'
   - '+.uxdc.net'
   - '+.uxdc.org'
   - '+.uxianhu.com'
@@ -55815,6 +55849,7 @@ payload:
   - '+.vdfly.com'
   - '+.vdian.com'
   - '+.vdisk.me'
+  - '+.vdncache.com'
   - '+.vdncloud.com'
   - '+.vdndc.com'
   - '+.vdnplus.com'
@@ -56294,6 +56329,9 @@ payload:
   - '+.vsnuf.com'
   - '+.vsochina.com'
   - '+.vsocloud.com'
+  - '+.vsooncat.com'
+  - '+.vsooncloud.com'
+  - '+.vsoontech.com'
   - '+.vspk.com'
   - '+.vspk.net'
   - '+.vsppt.com'
@@ -56576,7 +56614,6 @@ payload:
   - '+.wangamela.com'
   - '+.wanganedu.com'
   - '+.wangbixi.com'
-  - '+.wangcaigu.com'
   - '+.wangcaio2o.com'
   - '+.wangcaiwang.com'
   - '+.wangcanmou.com'
@@ -56848,6 +56885,7 @@ payload:
   - '+.wave-game.com'
   - '+.wave-optics.com'
   - '+.waveshare.net'
+  - '+.wavideo.tv'
   - '+.wavky.com'
   - '+.wavpub.com'
   - '+.wawa114.com'
@@ -57715,6 +57753,7 @@ payload:
   - '+.whghfz.com'
   - '+.whghjt.com'
   - '+.whgjjtjx.com'
+  - '+.whgjzt.com'
   - '+.whgk.com'
   - '+.whglory.com'
   - '+.whgmbwg.com'
@@ -58519,6 +58558,7 @@ payload:
   - '+.wordpress.la'
   - '+.wordpresshy.com'
   - '+.wordscan.net'
+  - '+.work28.com'
   - '+.workchat.com'
   - '+.workec.com'
   - '+.workehr.com'
@@ -59021,6 +59061,7 @@ payload:
   - '+.wwjia.com'
   - '+.wwleww.com'
   - '+.wwmhdq.com'
+  - '+.wws23.com'
   - '+.www-05.ibm.com'
   - '+.www-123490.com'
   - '+.www-175345.com'
@@ -59289,7 +59330,6 @@ payload:
   - '+.x64pro.com'
   - '+.x6d.com'
   - '+.x6kj.com'
-  - '+.x6tuan.com'
   - '+.x6x8.com'
   - '+.x72y.com'
   - '+.x7sy.com'
@@ -59447,7 +59487,6 @@ payload:
   - '+.xcarimg.com'
   - '+.xcb-family.com'
   - '+.xcbank.com'
-  - '+.xcbcyjm.com'
   - '+.xcczgm.com'
   - '+.xcdesign.net'
   - '+.xcexe.com'
@@ -59790,6 +59829,7 @@ payload:
   - '+.xiangange.com'
   - '+.xianganquan.com'
   - '+.xianganyu.com'
+  - '+.xiangbala.net'
   - '+.xiangbinjun.com'
   - '+.xiangbinmeigui.com'
   - '+.xiangbojiubo.com'
@@ -60904,7 +60944,6 @@ payload:
   - '+.xjisme.com'
   - '+.xjiuai.com'
   - '+.xjiyou.com'
-  - '+.xjjjb.com'
   - '+.xjjnjp.org'
   - '+.xjjxc.com'
   - '+.xjltp.com'
@@ -61066,6 +61105,7 @@ payload:
   - '+.xmnovel.com'
   - '+.xmodelmall.com'
   - '+.xmonecode.com'
+  - '+.xmos.tv'
   - '+.xmpcba.com'
   - '+.xmrbi.com'
   - '+.xmsec.cc'
@@ -61357,7 +61397,6 @@ payload:
   - '+.xttblog.com'
   - '+.xttongcai.com'
   - '+.xttongji.com'
-  - '+.xttsg.com'
   - '+.xttz.com'
   - '+.xtu2.com'
   - '+.xtuan.com'
@@ -61873,6 +61912,7 @@ payload:
   - '+.xzggjyzpw.com'
   - '+.xzgjj.com'
   - '+.xzh200c.shop'
+  - '+.xzhengyida.com'
   - '+.xzhichang.com'
   - '+.xzhizao.com'
   - '+.xzji.com'
@@ -61888,6 +61928,7 @@ payload:
   - '+.xzn56.com'
   - '+.xzoo.org'
   - '+.xzper.com'
+  - '+.xzpoll.com'
   - '+.xzr.kim'
   - '+.xzrj.cc'
   - '+.xzrjsoft.com'
@@ -62469,6 +62510,7 @@ payload:
   - '+.yezhuwuyou.com'
   - '+.yeziting.com'
   - '+.yezixigame.com'
+  - '+.yfbzb.com'
   - '+.yfcache.com'
   - '+.yfcalc.com'
   - '+.yfcdn.net'
@@ -62735,7 +62777,6 @@ payload:
   - '+.yijiexiaomin.com'
   - '+.yijinghong.com'
   - '+.yijingji.com'
-  - '+.yijingying.com'
   - '+.yijintong.net'
   - '+.yijirecovery.com'
   - '+.yijiupeixun.com'
@@ -63758,6 +63799,7 @@ payload:
   - '+.youxicool.net'
   - '+.youxidaxue.com'
   - '+.youxidr.com'
+  - '+.youxidun.com'
   - '+.youxiduo.com'
   - '+.youxifan.com'
   - '+.youxigongchang.com'
@@ -64030,6 +64072,7 @@ payload:
   - '+.ytcos.com'
   - '+.ytcutv.com'
   - '+.ytdaily.com'
+  - '+.ytdcloud.com'
   - '+.ytdsdz.com'
   - '+.ytesting.com'
   - '+.ytet.org'
@@ -64126,7 +64169,6 @@ payload:
   - '+.yuantutech.com'
   - '+.yuanu.com'
   - '+.yuanwanw.com'
-  - '+.yuanxifu.net'
   - '+.yuanxuxu.com'
   - '+.yuanyi.biz'
   - '+.yuanyoutao.com'
@@ -64214,6 +64256,7 @@ payload:
   - '+.yuesuoping.com'
   - '+.yuetu.tech'
   - '+.yuetuvip.net'
+  - '+.yuetx.cc'
   - '+.yueweimusic.com'
   - '+.yuewen.com'
   - '+.yuexianck.com'
@@ -64277,6 +64320,7 @@ payload:
   - '+.yuleredian.com'
   - '+.yuleres.com'
   - '+.yuli.be'
+  - '+.yulicdn.com'
   - '+.yuliechina.com'
   - '+.yulinapp.com'
   - '+.yulingtianxia.com'
@@ -64818,6 +64862,7 @@ payload:
   - '+.yylending.com'
   - '+.yylm.org'
   - '+.yymedias.com'
+  - '+.yymh999.com'
   - '+.yyming2.com'
   - '+.yymoban.com'
   - '+.yyny.me'
@@ -64959,6 +65004,7 @@ payload:
   - '+.zaiminglvsuo.com'
   - '+.zainanjing365.com'
   - '+.zaisd.com'
+  - '+.zaitianyan.com'
   - '+.zaitong.net'
   - '+.zaitongxiang.com'
   - '+.zaitouwang.com'
@@ -65218,6 +65264,7 @@ payload:
   - '+.zelinonline.com'
   - '+.zemismart.com'
   - '+.zemuo.com'
+  - '+.zen-est.com'
   - '+.zengdefei.com'
   - '+.zengjunpeng.com'
   - '+.zengrong.net'
@@ -65420,6 +65467,7 @@ payload:
   - '+.zgsydw.com'
   - '+.zgsynews.com'
   - '+.zgtcqw.com'
+  - '+.zgtghccl.com'
   - '+.zgtianqi.com'
   - '+.zgtjq.com'
   - '+.zgtlgs.com'
@@ -65942,6 +65990,7 @@ payload:
   - '+.zhimace.com'
   - '+.zhimantian.com'
   - '+.zhimaruanjian.com'
+  - '+.zhimatech.com'
   - '+.zhimawenda.com'
   - '+.zhimax.com'
   - '+.zhimg.com'
@@ -67566,6 +67615,7 @@ payload:
   - '+.zxw51.com'
   - '+.zxwcbj.com'
   - '+.zxwindow.com'
+  - '+.zxwstong.com'
   - '+.zxwyouxi.com'
   - '+.zxxk.com'
   - '+.zxxww.com'
@@ -67580,7 +67630,6 @@ payload:
   - '+.zy2071.com'
   - '+.zy728.com'
   - '+.zyan.cc'
-  - '+.zyart.org'
   - '+.zybang.com'
   - '+.zybang1.com'
   - '+.zybird.com'
@@ -67638,7 +67687,6 @@ payload:
   - '+.zyqccs.com'
   - '+.zyrj.org'
   - '+.zyrmw.com'
-  - '+.zyrnn.com'
   - '+.zyrykbiandao.com'
   - '+.zys.me'
   - '+.zysheji.net'
